--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #edccee;
+  /* background-color: #06070d !important; */
+  color: #fff;
+  background-image: url("./Assets/images/background.png");
 }
 
 code {
@@ -13,15 +15,30 @@ code {
     monospace;
 }
 
+/************************fonts css******************************/
+
+/************************fonts end css******************************/
+@font-face {
+  font-family: "SEGA LOGO FONT";
+  font-style: normal;
+  font-weight: normal;
+  src: local("SEGA LOGO FONT"), url("./Assets/fonts/SEGA.woff") format("woff");
+}
+
+h1 {
+  font-family: "SEGA LOGO FONT";
+  color: #0ccac4;
+  font-weight: 200;
+}
 /************************particle js css******************************/
 
 .particles {
-  position: absolute;
+  position: fixed;
   z-index: -1;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   width: 100%;
-  /* height: 100%; */
+  height: 100%;
   overflow-x: hidden;
 }
 /************************particle js css end******************************/
@@ -47,3 +64,8 @@ code {
 }
 
 /************************Scroll Bar end******************************/
+
+/************************Card******************************/
+
+
+/************************Card end******************************/
