made some more progress

--- a/src/index.css
+++ b/src/index.css
@@ -67,5 +67,10 @@ h1 {
 
 /************************Card******************************/
 
-
 /************************Card end******************************/
+
+/************************Radio hide ******************************/
+input[type="radio"] {
+  display: none;
+}
+/************************Radio hide  end******************************/
